# Med_MVP

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  LICENSE  PLAN.md  README.md  REVIEW.md  TTD_PLAN.md  docker-compose.yml  pyproject.toml  requirements.txt  run-demo.sh
app/: __init__.py  appointment_repository.py  appointment_router.py  appointment_service.py  auth.py  auth_repository.py  auth_router.py  auth_service.py  config.py  database.py  dependencies.py  email_sender.py  main.py  models.py  repository.py  router.py  schemas.py  service.py
app/routers/: patients.py
app/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  PROMPT.md  REQUIREMENTS.md  REVIEW.md  TASK.md  TESTING.md  TTD_PLAN.md
frontend/: index.html
src/: database.py  main.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_patients.py
